.kubernetes/kubernetestest-deployment.template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <name>
  namespace: <namespace>
spec:
  replicas: <replicas>
  selector:
    matchLabels:
      app: <selector-name>
  template:
    metadata:
      labels:
        app: <selector-name>
    spec:
      containers:
        - name: <pod-name>
          image:  <image>
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: <docker-registry-secret>
