.kubernetes/kubernetestest-service.template.yml
apiVersion: v1
kind: Service
metadata:
  name: <name>
  namespace: <namespace>
spec:
  selector:
    app: <selector-name>
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
